# stellar-metrics

./: .gitignore  LICENSE  MANIFEST.in  README.md  THIRD-PARTIES-LICENSE  pyproject.toml  requirements.txt
src/stellar_metrics/: __init__.py  __main__.py  attribute_preservation.py  clip_based.py  dino_subject_fidelity.py  dreamsim_distance.py  human_preference_score.py  identity_preservation.py  identity_stability.py  image_reward.py  object_faithfulness.py  pick_score.py  syn_dataset.py  utils.py
src/stellar_metrics/analysis/: __main__.py  const.py  utils.py
src/stellar_metrics/models/: __init__.py
src/stellar_metrics/models/aesthetic_predictor/: __init__.py  aesthetic_predictor.py
src/stellar_metrics/models/clip/: __init__.py  clip.py
src/stellar_metrics/models/dino/: __init__.py  dino.py
src/stellar_metrics/models/hpc/: __init__.py  hpc.py
src/stellar_metrics/models/owl_vit/: __init__.py  owl_vit.py
src/stellar_metrics/models/retina_face/: __init__.py  model.py
tests/: test_main.py  test_metrics.py
tests/assets/: README.md
tests/assets/mock_stellar_dataset/000/: 0_attributes.json  1_attributes.json  prompt.json
tests/assets/save_dir/: attribute_preservation_syn.csv  clip_laion_CLIP-ViT-bigG-14-laion2B-39B-b160k.csv  identity_preservation.csv  identity_stability.csv  object_faithfulness.csv  res.md
tests/assets/stellar_net/: 000-0-00.json  000-0-01.json  000-0-02.json  000-1-00.json  000-1-01.json  000-1-02.json  199-0-00.json  199-0-01.json  199-0-02.json  199-1-00.json  199-1-01.json  199-1-02.json
(+3 files in other folders)
